...
    },
    "Members": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Membros"
          }
        }
      }
    },
    "Pages": {
      "localizations": {
...
    },
    "Live": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Ao vivo"
          }
        }
      }
    },
    "The agent's screen": {
      "localizations": {
...
